--- a/templates/game.html
+++ b/templates/game.html
@@ -4,7 +4,7 @@
   <title>A Game</title>
 </head>
 <body>
-    <form action="/madlib">
+    <form action="/madlib" method = "POST">
         <label>Name a person <input type="text" name="name"></label>
 
         <br>
