working on compliment list

--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -4,7 +4,14 @@
   <title>A Compliment</title>
 </head>
 <body>
-    Hi {{ person }}! I think you're {{ compliment }}!
+    Hi {{ person }}! I think you're 
+    <ul>
+        { % for compliment in compliments % }
+        <li>{{ compliment }}</li>
+        <li>{{ compliment }}</li>
+        <li>{{ compliment }}</li>
+        { % endfor % }
+    </ul>
     <form action="/game">
         <label>Would you like to play a game? </label>
         <label><input type="radio" name="game" value="yes">Yes</label>
