--- a/templates/game.html
+++ b/templates/game.html
@@ -4,7 +4,7 @@
   <title>A Game</title>
 </head>
 <body>
-    <form action="/madlib" method = "POST">
+    <form action="/madlib" method="GET">
         <label>Name a person <input type="text" name="name"></label>
 
         <br>
@@ -29,9 +29,9 @@
 
         <br>
         <label>What verb do you want to use? 
-            <input type ="checkbox" name="verb[]", value="ran">Ran
-            <input type ="checkbox" name="verb[]", value="walked">Walked
-            <input type ="checkbox" name="verb[]", value="hopped">Hopped
+            <input type ="checkbox" name="verb", value="ran">Ran
+            <input type ="checkbox" name="verb", value="walked">Walked
+            <input type ="checkbox" name="verb", value="hopped">Hopped
         </label>
         <br>
 
